--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,7 +78,7 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
@@ -86,8 +86,8 @@
 }
 
 body {
-  color: var(--background);
-  background: var(--foreground);
+  background: var(--background);
+  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
 
